1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* OutputStream.[hm]: Remove -appendC:.

1998-11-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Array.[hm] ([Array_c +create:setMemberAlloc:setCount:],
	[Array_c -getMemberAlloc]
	[Array_c -setMemberAlloc:setCount:]): Remove.

	* collections.h: Remove creating -setDefaultMember:; there is
	already a setting method.

1998-11-02  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (Collection): Note that copies are shallow.

1998-10-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.

	* OrderedSet.m: Reformatting throughout.
	([OrderedSet_c -contains:]): Return YES and NO instead of 1 and 0.  

	* collections.h (Sorted): Moved to design document.
	
	* StringObject.m ([String_c +create:setC:]): Use getZone instead
	of argument aZone for allocating string space.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Map.[hm]: ([MapIndex_c -setLoc:]): 
	Make argument to setLoc: of type id <Symbol>.

	* Set.[hm] ([SetIndex_c -setLoc:]): Likewise.

	* List_GEN.[hm] ([TINDEX -setLoc:]): Likewise.

	* Array.[hm] ([ArrayIndex_c -setLoc:]): Likewise.

	* Map.h, List_GEN.h, Set.h: Reformatting throughout.

	* collections.h (INDEXSTARTP, INDEXENDP, REMOVEDP,
	ARCHIVERLITERALP): New macros.

	* Collection.m: Reformatting throughout.
	([Index_any -findNext:]): Use INDEXENDP.
	([Index_any -findPrev:]): Use INDEXSTARTP.

	* Array.m: Reformatting throughout.
	Include collections.h.
	([ArrayIndex_c -next], [ArrayIndex_c -prev], [ArrayIndex_c -get], 
	[ArrayIndex_c -put:], [ArrayIndex_c -getLoc], [ArrayIndex_c -setLoc:],
	[ArrayIndex_c -getOffset]):  Use INDEX{START,END}P.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
	(install-data-local): Do two installs, for install-sh case.

1998-07-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
