@@ -1,3 +1,14 @@
+1998-11-15  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* collections.h, collections.m (_collections_initialize): 
+	Add ArchiverSymbol and ArchiverArray symbols.
+
+	* InputStream.m ([InputStream_c -_unexpectedEOF_], 
+	[InputStream_c -_badType_:]): Raise an event instead of aborting.
+	Change return type to void.
+	([InputStream_c -getExpr]): Add support for keyword and array
+	loading.
+
 1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* OutputStream.[hm]: Remove -appendC:.
